<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <TextView
            android:id="@+id/tvNameApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/app_name"
            style="@style/poppinsExtraBold"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDetailStory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_user"
            style="@style/poppinsRegular"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNameApp" />


        <ImageButton
            android:id="@+id/btnBack"
            android:contentDescription="@string/go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="@+id/tvDetailStory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvNameApp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivAvatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/avatar"
            app:civ_border_color="@color/navi"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailStory"
            app:srcCompat="@drawable/avatar" />

        <ImageView
            android:id="@+id/ivLogo"
            android:contentDescription="@string/logo_app"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/logoapp2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvHello"
            style="@style/poppinsRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/hello"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAvatar" />

        <TextView
            android:id="@+id/tvUsername"
            style="@style/poppinsExtraBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/username"
            android:textSize="20sp"
            android:maxLines="2"
            android:ellipsize="end"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHello" />

        <TextView
            android:id="@+id/tvID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_userId"
            style="@style/poppinsRegular"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

        <Button
            android:id="@+id/btnAddStory"
            style="@style/poppinsMedium"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/navi"
            android:contentDescription="@string/add_a_story"
            android:text="@string/add_a_new_story"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvID" />

        <Button
            android:id="@+id/btnSwitchLang"
            style="@style/poppinsMedium"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:backgroundTint="@color/navi"
            android:contentDescription="@string/switch_language"
            android:text="@string/switch_language"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAddStory" />

        <Button
            android:id="@+id/btnSwitchTheme"
            style="@style/poppinsMedium"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:backgroundTint="@color/navi"
            android:contentDescription="@string/switch_theme"
            android:text="@string/switch_theme"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSwitchLang" />

        <Button
            android:id="@+id/btnAbout"
            style="@style/poppinsMedium"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:backgroundTint="@color/navi"
            android:contentDescription="@string/about_app_title"
            android:text="@string/about_app_title"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSwitchTheme" />

        <Button
            android:id="@+id/action_logout"
            style="@style/poppinsMedium"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/redBtn"
            android:contentDescription="@string/logout"
            android:drawableEnd="@drawable/outline_logout_white"
            android:text="@string/logout"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/ivLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAbout" />

        <ImageButton
            android:id="@+id/btnEdit"
            android:contentDescription="@string/edit_photo_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            app:layout_constraintEnd_toEndOf="@+id/ivAvatar"
            app:layout_constraintTop_toTopOf="@+id/ivAvatar"
            app:srcCompat="@drawable/edit" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>